[gd_scene load_steps=34 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tileset/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Ladder.gd" type="Script" id=3]
[ext_resource path="res://asset/tile_set/3 Objects/Ladders/2.png" type="Texture" id=4]
[ext_resource path="res://asset/tile_set/3 Objects/Ladders/1.png" type="Texture" id=5]
[ext_resource path="res://main/DamageLadder.gd" type="Script" id=6]
[ext_resource path="res://asset/tile_set/3 Objects/Ladders/5.png" type="Texture" id=7]
[ext_resource path="res://main/MediumLadder.gd" type="Script" id=8]
[ext_resource path="res://main/Main.gd" type="Script" id=9]
[ext_resource path="res://main/RuneChest.gd" type="Script" id=10]
[ext_resource path="res://asset/tile_set/4 Animated objects/Rune.png" type="Texture" id=11]
[ext_resource path="res://asset/tile_set/4 Animated objects/Chest.png" type="Texture" id=12]
[ext_resource path="res://main/Coin.gd" type="Script" id=13]
[ext_resource path="res://asset/tile_set/4 Animated objects/Coin.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.3151, 143.829 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.32202, 17.17 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.9061, 79.6628 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Rune",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Chest",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 12.4808, 6.66868 )

[sub_resource type="Animation" id=14]
resource_name = "Coins"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=15]
radius = 4.20324
height = 0.650391

[sub_resource type="Animation" id=16]
resource_name = "Coins"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Coins"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Coins"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Coins"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[node name="Main" type="Node"]
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 455.125, 320 )
collision/safe_margin = 0.062

[node name="Map" parent="." instance=ExtResource( 2 )]
position = Vector2( 157, 0 )

[node name="Objects" type="Node" parent="."]

[node name="LongLadder" type="Area2D" parent="Objects"]
position = Vector2( 1139.59, 301.964 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/LongLadder"]
position = Vector2( -6.05347, 83.7318 )
scale = Vector2( 0.87, 0.87 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.38867, 193.674 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.38867, 163.683 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.38183, 131.694 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.41882, 99.7318 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.45398, 67.8489 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.45398, 35.937 )
texture = ExtResource( 4 )

[node name="Sprite7" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.45398, 3.944 )
texture = ExtResource( 4 )

[node name="Sprite8" type="Sprite" parent="Objects/LongLadder"]
position = Vector2( -5.45398, -27.974 )
texture = ExtResource( 4 )

[node name="DamageLadder" type="Area2D" parent="Objects"]
position = Vector2( 639.715, 57.8301 )
gravity = 0.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Objects/DamageLadder"]
position = Vector2( 1081.06, 283.103 )
scale = Vector2( 0.73106, 1.04802 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="Objects/DamageLadder"]
position = Vector2( 1081.03, 350.123 )
scale = Vector2( 0.73106, 1.04802 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="Objects/DamageLadder"]
position = Vector2( 1081.05, 316.598 )
scale = Vector2( 0.73106, 1.04802 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/DamageLadder"]
position = Vector2( 1078.64, 288.428 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Objects/DamageLadder"]
position = Vector2( 1083.07, 348.225 )
shape = SubResource( 2 )

[node name="MediumLadder" type="Area2D" parent="Objects"]
position = Vector2( 333.701, 252.872 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/MediumLadder"]
position = Vector2( -1.9632, 2.92734 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Objects/MediumLadder"]
position = Vector2( -0.479187, 66.8383 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Objects/MediumLadder"]
position = Vector2( -0.465179, 34.8453 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Objects/MediumLadder"]
position = Vector2( -0.465179, 2.92734 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Objects/MediumLadder"]
position = Vector2( -0.465179, -29.0466 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="Objects/MediumLadder"]
position = Vector2( -0.47818, -61.0486 )
texture = ExtResource( 4 )

[node name="RuneChest" type="Area2D" parent="Objects"]
position = Vector2( 647.671, 320.901 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Objects/RuneChest"]
position = Vector2( 0, -0.529846 )
frames = SubResource( 12 )
animation = "Chest"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/RuneChest"]
position = Vector2( -3.082, 7.15563 )
shape = SubResource( 13 )

[node name="Tween" type="Tween" parent="Objects/RuneChest"]

[node name="RuneChest2" type="Area2D" parent="Objects"]
position = Vector2( 1255.04, 511.638 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Objects/RuneChest2"]
position = Vector2( 0, -0.529846 )
frames = SubResource( 12 )
animation = "Chest"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/RuneChest2"]
position = Vector2( 2.68729, 8.72906 )
shape = SubResource( 13 )

[node name="Tween" type="Tween" parent="Objects/RuneChest2"]

[node name="Coins" type="Node" parent="Objects"]

[node name="Coin" type="Area2D" parent="Objects/Coins"]
position = Vector2( 112.639, 265.422 )
gravity_point = true
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Objects/Coins/Coin"]
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objects/Coins/Coin"]
anims/Coins = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Coins/Coin"]
shape = SubResource( 15 )

[node name="Coin2" type="Area2D" parent="Objects/Coins"]
position = Vector2( 192.876, 166.118 )
gravity_point = true
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Objects/Coins/Coin2"]
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objects/Coins/Coin2"]
anims/Coins = SubResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Coins/Coin2"]
shape = SubResource( 15 )

[node name="Coin3" type="Area2D" parent="Objects/Coins"]
position = Vector2( 275.1, 166.118 )
gravity_point = true
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Objects/Coins/Coin3"]
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objects/Coins/Coin3"]
anims/Coins = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Coins/Coin3"]
shape = SubResource( 15 )

[node name="Coin4" type="Area2D" parent="Objects/Coins"]
position = Vector2( 387.115, 323.098 )
gravity_point = true
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Objects/Coins/Coin4"]
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objects/Coins/Coin4"]
anims/Coins = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Coins/Coin4"]
shape = SubResource( 15 )

[node name="Coin5" type="Area2D" parent="Objects/Coins"]
position = Vector2( 527.332, 328.098 )
gravity_point = true
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Objects/Coins/Coin5"]
texture = ExtResource( 14 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objects/Coins/Coin5"]
anims/Coins = SubResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Coins/Coin5"]
shape = SubResource( 15 )
[connection signal="body_entered" from="Objects/LongLadder" to="Objects/LongLadder" method="_on_Ladder_body_entered"]
[connection signal="body_exited" from="Objects/LongLadder" to="Objects/LongLadder" method="_on_Ladder_body_exited"]
[connection signal="body_entered" from="Objects/DamageLadder" to="Objects/DamageLadder" method="_on_DamageLadder_body_entered"]
[connection signal="body_exited" from="Objects/DamageLadder" to="Objects/DamageLadder" method="_on_DamageLadder_body_exited"]
[connection signal="body_entered" from="Objects/MediumLadder" to="Objects/MediumLadder" method="_on_MediumLadder_body_entered"]
[connection signal="body_exited" from="Objects/MediumLadder" to="Objects/MediumLadder" method="_on_MediumLadder_body_exited"]
[connection signal="body_entered" from="Objects/RuneChest" to="Objects/RuneChest" method="_on_RuneChest_body_entered"]
[connection signal="body_exited" from="Objects/RuneChest" to="Objects/RuneChest" method="_on_RuneChest_body_exited"]
[connection signal="animation_finished" from="Objects/RuneChest/AnimatedSprite" to="Objects/RuneChest" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Objects/RuneChest2" to="Objects/RuneChest2" method="_on_RuneChest_body_entered"]
[connection signal="body_exited" from="Objects/RuneChest2" to="Objects/RuneChest2" method="_on_RuneChest_body_exited"]
[connection signal="animation_finished" from="Objects/RuneChest2/AnimatedSprite" to="Objects/RuneChest2" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Objects/Coins/Coin" to="Objects/Coins/Coin" method="_on_Coin_body_entered"]
[connection signal="body_exited" from="Objects/Coins/Coin" to="Objects/Coins/Coin" method="_on_Coin_body_exited"]
[connection signal="body_entered" from="Objects/Coins/Coin2" to="Objects/Coins/Coin2" method="_on_Coin_body_entered"]
[connection signal="body_exited" from="Objects/Coins/Coin2" to="Objects/Coins/Coin2" method="_on_Coin_body_exited"]
[connection signal="body_entered" from="Objects/Coins/Coin3" to="Objects/Coins/Coin3" method="_on_Coin_body_entered"]
[connection signal="body_exited" from="Objects/Coins/Coin3" to="Objects/Coins/Coin3" method="_on_Coin_body_exited"]
[connection signal="body_entered" from="Objects/Coins/Coin4" to="Objects/Coins/Coin4" method="_on_Coin_body_entered"]
[connection signal="body_exited" from="Objects/Coins/Coin4" to="Objects/Coins/Coin4" method="_on_Coin_body_exited"]
[connection signal="body_entered" from="Objects/Coins/Coin5" to="Objects/Coins/Coin5" method="_on_Coin_body_entered"]
[connection signal="body_exited" from="Objects/Coins/Coin5" to="Objects/Coins/Coin5" method="_on_Coin_body_exited"]
